fix: added overflow hidden and fixed section how bottom padding

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@
 /* HOW IT WORKS SECTION */
 /* *********************************************************** */
 .section-how {
-  padding: 9.6rem 0;
+  padding: 9.6rem 0 3.2rem 0;
 }
 .step-img-box {
   display: flex;
